--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -46,7 +46,7 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 91
+          "height": 74
         },
         "outputId": "27907855-6e9f-43c2-eb96-b2f0ce24b8be"
       },
@@ -95,7 +95,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 300
         },
-        "outputId": "baaeaf7a-4948-48cd-ec32-10fa171628b1"
+        "outputId": "adc8178d-b57d-480f-d689-f6b34ea810d6"
       },
       "source": [
         "import pandas as pd\n",
@@ -104,27 +104,40 @@
         "\n",
         "slog = pd.read_csv(io.BytesIO(uploaded['2019-05-0522_00_58.395526.txt']))\n",
         "\n",
-        "slog = slog.set_index(pd.DatetimeIndex(slog['datetime']))\n",
+        "#slog = slog.set_index(pd.DatetimeIndex(slog['datetime']))\n",
+        "\n",
+        "temp = pd.DatetimeIndex(slog['datetime'])\n",
+        "slog['Date'] = temp.date\n",
+        "slog['Time'] = temp.time\n",
+        "\n",
+        "# isolate datetime into dt\n",
+        "time = slog['Time']\n",
+        "\n",
+        "# split time from datetime\n",
+        "\n",
         "\n",
         "#slog.resample('15S').mean()\n",
         "\n",
         "slog.head()\n",
         "\n",
-        "slog.plot(x='datetime', y='y', kind='line')"
+        "slog.plot(x='datetime', y='y', kind='line')\n",
+        "time.head()\n",
+        "N = np.int(np.prod(time.shape))#length of the array\n",
+        "N\n",
+        "t1 = time[1]\n",
+        "t0 = time[0]\n",
+        "#Fs = 1/pd.Timedelta()  #sample rate (Hz)\n",
+        "#T = 1/Fs;\n",
+        "print(\"# Samples:\",N)\n"
       ],
-      "execution_count": 7,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fcc6a8de8d0>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
+          "output_type": "stream",
+          "text": [
+            "# Samples: 54476\n"
+          ],
+          "name": "stdout"
         },
         {
           "output_type": "display_data",
@@ -158,6 +171,35 @@
         "\n",
         "what is FFT?\n",
         "https://blog.mide.com/vibration-analysis-fft-psd-and-spectrogram\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GeyRoETv2hIz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "75f8fb9a-a350-4849-bc31-f0f7ff54d553"
+      },
+      "source": [
+        "#Determine variables\n",
+        "N = np.int(np.prod(time.shape))#length of the array\n",
+        "#Fs = 1/(time[1]-time[0])  #sample rate (Hz)\n",
+        "#T = 1/Fs;\n",
+        "print(\"# Samples:\",N)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "# Samples: 54476\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
